# study_cpp

OpenGL/windowTemplate/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp  program
OpenGL/windowTemplate/include/: Vertex.h
OpenGL/windowTemplate/menu/: menu.cpp  menu.hpp
OpenGL/windowTemplate/primitives/: cube.h  rectangle.h  triangle.h
OpenGL/windowTemplate/shaders/: fs.glsl  vs.glsl
algorithms/ring/: crc_functions.cpp  crc_functions.h  main.cpp  ring.cpp  ring.h
miscellaneous/TracksAndPoints/assignment_operators/: CMakeLists.txt  Mobile.cpp  Mobile.h  Track.cpp  Track.h  main.cpp
miscellaneous/TracksAndPoints/concat_tracks/: CMakeLists.txt  Track.cpp  Track.h  main.cpp
miscellaneous/TracksAndPoints/findNearestByTime/: CMakeLists.txt  Track.cpp  Track.h  main.cpp
miscellaneous/deque_copy_elements/: CMakeLists.txt  main.cpp
miscellaneous/hash_2d_int_point/: main.cpp
miscellaneous/multiple_inheritance/: main.cpp
miscellaneous/print_memory/: main.c  program
miscellaneous/socket_basic/: CMakeLists.txt  ServerSocket.cpp  SocketClient.cpp  Tracker.h
miscellaneous/struct_members_in_memory/: main.cpp
miscellaneous/tree_sum/: main.cpp
miscellaneous/union_bit_fields_example/: main.cpp
patterns/Active/: ActiveScratch.cpp  ActiveScratch.h  JobQueue.cpp  JobQueue.h
patterns/BaseMediator/: CMakeLists.txt  main.cpp
patterns/BaseMediator/Model/: Address.h  BaseService.cpp  BaseService.h  BureaucraticOrganization.h  DataStorage.cpp  DataStorage.h  DistrictAdministrativeCenter.cpp  DistrictAdministrativeCenter.h  FuneralService.cpp  FuneralService.h  MaternityService.cpp  MaternityService.h  MigrationService.cpp  MigrationService.h  Person.h
patterns/BaseObserver/: CMakeLists.txt  main.cpp
patterns/ChainofResponsibilityPointsAdder/: AddPointHandler.cpp  AddPointHandler.h  Basics.h  CMakeLists.txt  Tracks.cpp  Tracks.h  main.cpp
patterns/Command/: CMakeLists.txt  Logic.cpp  Logic.h  main.cpp
patterns/Command/Command/: Command.h  CommandExecutor.cpp  CommandExecutor.h
patterns/Command/ConcreteCommands/: CommandAdd.cpp  CommandAdd.h  CommandPrint.cpp  CommandPrint.h  CommandSaveToFile.cpp  CommandSaveToFile.h  LambdaCommand.cpp  LambdaCommand.h
stepic_cpp_second_course/Multimethod2/: main.cpp
stepic_cpp_second_course/apply/: apply.cpp
stepik_cpp/First_Course/Any/: description  main.cpp
stepik_cpp/First_Course/FooFunctionInMultipleFiles/: foo.hpp
templates/imgui_sfml_application/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
templates/imgui_sfml_application/imgui/: imgui.ini
templates/imgui_sfml_application/shaders/: fs.glsl  vs.glsl
templates/socket_file_client/: CMakeLists.txt  main.cpp
templates/socket_file_server/: CMakeLists.txt  main.cpp
vector_inheritance/: main.cpp
(+154 files in other folders)
